<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_list"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_list_icon"
        android:title="@string/bottom_navigation_list"
        app:showAsAction="ifRoom"  />
    <item
        android:id="@+id/action_splash"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_player_icon"
        android:title="@string/bottom_navigation_splash"
        app:showAsAction="ifRoom"  />
    <item
        android:id="@+id/action_player"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_profile_icon"
        android:title="@string/bottom_navigation_player"
        app:showAsAction="ifRoom"  />
    <item
        android:id="@+id/action_camera"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_profile_icon"
        android:title="@string/bottom_navigation_camera"
        app:showAsAction="ifRoom"  />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_profile_icon"
        android:title="@string/bottom_navigation_profile"
        app:showAsAction="ifRoom"  />
</menu>